# watchdirs

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  watchdirs
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-submission.yml
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-trusted-snapshot-collection/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-REVIEWS.md  01-SECURITY.md  01-SKELETON.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-growth-frontier-reporting/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW-RERUN.md  02-REVIEW.md  02-REVIEWS.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-pressure-gap-diagnostics/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-REVIEWS.md  03-VERIFICATION.md
.planning/phases/03.1-storage-efficiency/: .continue-here.md  03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-PLAN.md  03.1-03-SUMMARY.md  03.1-04-PLAN.md  03.1-04-SUMMARY.md  03.1-05-PLAN.md  03.1-05-SUMMARY.md  03.1-CONTEXT.md  03.1-DISCUSSION-LOG.md  03.1-PATTERNS.md  03.1-RESEARCH.md  03.1-VALIDATION.md  03.1-VERIFICATION.md
.planning/phases/03.2-scan-time-folder-collapse/: 03.2-01-PLAN.md  03.2-01-SUMMARY.md  03.2-02-PLAN.md  03.2-02-SUMMARY.md  03.2-03-PLAN.md  03.2-03-SUMMARY.md  03.2-04-PLAN.md  03.2-04-SUMMARY.md  03.2-CONTEXT.md  03.2-DISCUSSION-LOG.md  03.2-PATTERNS.md  03.2-RESEARCH.md  03.2-REVIEW-FIX.md  03.2-REVIEW.md  03.2-REVIEWS.md  03.2-VALIDATION.md  03.2-VERIFICATION.md
.planning/phases/04-scheduled-retention-operations/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-REVIEWS.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/quick/260617-h9d-fix-collect-wiring-so-configured-collaps/: PLAN.md  SUMMARY.md
.planning/quick/260617-kjf-refactor-retention-policy-into-explicit-/: PLAN.md  SUMMARY.md
.planning/quick/260617-kwt-roll-out-watchdirs-user-level-observatio/: PLAN.md  SUMMARY.md
.planning/quick/260617-l5l-add-single-watchdirs-cli-control-surface/: PLAN.md  SUMMARY.md
.planning/quick/260617-lo2-add-practical-default-watchdirs-cli-beha/: PLAN.md  SUMMARY.md
.planning/quick/260617-ls6-audit-and-clean-watchdirs-repository-wor/: PLAN.md  SUMMARY.md
examples/: host.watchdirs.toml  senbonzakura.watchdirs.toml
ops/systemd/: watchdirs-collect.service  watchdirs-collect.timer  watchdirs-prune.service  watchdirs-prune.timer  watchdirs-query.socket  watchdirs-query@.service  watchdirs-vacuum.service  watchdirs-vacuum.timer
scripts/: check_crap_gate.py  check_packaging_smoke.py  github_sweep.py  interval_storage_spike.py  rollout_v7.sh  test_rollout_v7.sh
src/watchdirs/: __main__.py  cli.py  config.py  models.py  ops_lock.py  quality_suppressions.py
src/watchdirs/bench/: __init__.py  churn.py  duration.py  size.py
src/watchdirs/collect/: __init__.py  classify.py  mounts.py  scanner.py
src/watchdirs/db/: __init__.py  connection.py  migrations.py  retention.py  schema.sql
src/watchdirs/diagnostics/: __init__.py  deleted_open.py  df_index.py  docker.py  summary.py
src/watchdirs/reporting/: __init__.py  errors.py  frontier.py  pairs.py  queries.py  render.py
tests/: conftest.py  test_cli_collect.py  test_cli_report_commands.py  test_collect_observability.py  test_db_connection_lifecycle.py  test_db_integrity_gate.py  test_db_interval_storage.py  test_db_schema.py  test_diagnostics_deleted_open.py  test_diagnostics_df_index.py  test_diagnostics_docker.py  test_diagnostics_summary.py  test_frontier.py  test_github_sweep.py  test_grouping.py  test_migrations_dictionary.py  test_mount_policy.py  test_ops_locking.py  test_ops_retention.py  test_ops_vacuum.py  test_path_dictionary.py  test_quality_suppressions.py  test_reporting_equivalence.py  test_reporting_queries.py  test_scanner_semantics.py  test_systemd_units.py
tests/bench/: __init__.py  test_churn.py  test_interval_storage_spike.py  test_size.py
