[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdirs"
version = "0.1.0"
description = "Forensic directory snapshot collection for disk-pressure investigations"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "actionlint-py>=1.7.12.24",
    "basedpyright>=1.39.8",
    "import-linter>=2.7",
    "pytest>=9.1.0",
    "pytest-cov>=7",
    "pytest-crap>=0.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
    "vulture>=2.14",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".planning"]
preview = true

[tool.ruff.lint]
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "BLE",
    "UP",
    "C4",
    "PIE",
    "ISC",
    "RSE",
    "FLY",
    "RUF",
    "PERF",
    "SIM",
    "PTH",
    "DTZ",
    "PGH",
    "PLE",
    "LOG",
    "G",
    "FURB",
    "RET",
    "N818",
    "PLR2004",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR1702",
]
ignore = [
    "ISC001", # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B017",
    "C901",
    "DTZ",
    "PERF401",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR2004",
]

[tool.ruff.lint.pylint]
max-branches = 10
max-statements = 40

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src/watchdirs"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.watchdirs.suppressions]
paths = ["src", "ops", "pyproject.toml", "justfile", "README.md", "AGENTS.md"]

[tool.watchdirs.suppressions.baseline]
noqa = 6
type_ignore = 0
pyright = 0
pylint = 0
ruff = 0

[tool.setuptools.package-data]
"watchdirs.db" = ["schema.sql"]

[tool.coverage.run]
source = ["src/watchdirs"]
omit = ["tests/*", "src/watchdirs/__main__.py"]
patch = ["subprocess"]
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 77

[tool.importlinter]
root_package = "watchdirs"

[[tool.importlinter.contracts]]
id = "collect-boundary"
name = "Collect stays below orchestration and reporting"
type = "forbidden"
source_modules = ["watchdirs.collect"]
forbidden_modules = ["watchdirs.cli", "watchdirs.diagnostics", "watchdirs.reporting"]

[[tool.importlinter.contracts]]
id = "reporting-boundary"
name = "Reporting stays query/render only"
type = "forbidden"
source_modules = ["watchdirs.reporting"]
forbidden_modules = ["watchdirs.cli", "watchdirs.collect", "watchdirs.diagnostics"]

[[tool.importlinter.contracts]]
id = "diagnostics-boundary"
name = "Diagnostics stays above collection"
type = "forbidden"
source_modules = ["watchdirs.diagnostics"]
forbidden_modules = ["watchdirs.cli", "watchdirs.collect"]

[[tool.importlinter.contracts]]
id = "db-boundary"
name = "Database helpers stay away from orchestration and presentation"
type = "forbidden"
source_modules = ["watchdirs.db"]
forbidden_modules = ["watchdirs.cli", "watchdirs.collect", "watchdirs.diagnostics", "watchdirs.reporting"]

[[tool.importlinter.contracts]]
id = "foundation-boundary"
name = "Foundation modules stay below feature layers"
type = "forbidden"
source_modules = ["watchdirs.models", "watchdirs.config", "watchdirs.ops_lock"]
forbidden_modules = [
    "watchdirs.bench",
    "watchdirs.cli",
    "watchdirs.collect",
    "watchdirs.db",
    "watchdirs.diagnostics",
    "watchdirs.reporting",
]

[[tool.importlinter.contracts]]
id = "models-dependency-free"
name = "Models stay dependency-free"
type = "forbidden"
source_modules = ["watchdirs.models"]
forbidden_modules = [
    "watchdirs.bench",
    "watchdirs.cli",
    "watchdirs.collect",
    "watchdirs.config",
    "watchdirs.db",
    "watchdirs.diagnostics",
    "watchdirs.ops_lock",
    "watchdirs.reporting",
]

[[tool.importlinter.contracts]]
id = "runtime-does-not-depend-on-bench"
name = "Runtime code never depends on benchmarks"
type = "forbidden"
source_modules = [
    "watchdirs.cli",
    "watchdirs.collect",
    "watchdirs.config",
    "watchdirs.db",
    "watchdirs.diagnostics",
    "watchdirs.models",
    "watchdirs.ops_lock",
    "watchdirs.reporting",
]
forbidden_modules = ["watchdirs.bench"]

[[tool.importlinter.contracts]]
id = "report-rendering-stays-away-from-db"
name = "Report rendering stays away from database access"
type = "forbidden"
source_modules = [
    "watchdirs.reporting.frontier",
    "watchdirs.reporting.pairs",
    "watchdirs.reporting.render",
]
forbidden_modules = ["watchdirs.db"]

[[tool.importlinter.contracts]]
id = "reporting-no-db-lifecycle"
name = "Reporting does not manage database lifecycle"
type = "forbidden"
source_modules = ["watchdirs.reporting"]
forbidden_modules = ["watchdirs.db.connection", "watchdirs.db.retention"]

[[tool.importlinter.contracts]]
id = "diagnostics-no-db-lifecycle"
name = "Diagnostics does not manage database lifecycle"
type = "forbidden"
source_modules = ["watchdirs.diagnostics"]
forbidden_modules = ["watchdirs.db.connection", "watchdirs.db.retention"]

[tool.vulture]
paths = ["src/watchdirs", "tests"]
min_confidence = 65

[tool.pytest.ini_options]
pythonpath = ["src"]
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
testpaths = ["tests"]
